namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: wakashiyo-development
  labels:
    name: wakashiyo-development
