deployment-for-ingress.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  namespace: wakashiyo-development
  name: w-d-dep1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-1  
  template:
    metadata:
      labels:
        app: nginx-1
    spec:
      containers:
        - name: nginx
          image: nginx:1.12
          ports:
            - containerPort: 80

---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  namespace: wakashiyo-development
  name: w-d-dep2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-2  
  template:
    metadata:
      labels:
        app: nginx-2
    spec:
      containers:
        - name: nginx
          image: nginx:1.12
          ports:
            - containerPort: 80

---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  namespace: wakashiyo-development
  name: w-d-dep3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-3  
  template:
    metadata:
      labels:
        app: nginx-3
    spec:
      containers:
        - name: nginx
          image: nginx:1.12
          ports:
            - containerPort: 80
